--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,10 +16,13 @@
   width: 100%;
   height: 100%; }
 
+#main-footer a span :hover {
+  columns: #000000; }
+
 @media (min-width: 1199px) {
   .port-item {
     padding: 2em !important; } }
 
 @media (max-width: 480px) {
-  .port-item {
+  .port-item.p-4 {
     padding: 1em !important; } }
