Finished Last Contact section

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -21,6 +21,10 @@
   height: 100%;
 }
 
+form span i {
+  width: 20px;
+}
+
 @media (min-width: 1199px) {
   .port-item {
     padding: 2em !important;
