--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,6 +16,9 @@
   width: 100%;
   height: 100%; }
 
+form span i {
+  width: 20px; }
+
 @media (min-width: 1199px) {
   .port-item {
     padding: 2em !important; } }
